# photometric_stereo

./: CMakeLists.txt  readme.md
img/bearing/: albedo_f_map.tif
img/calib_ball/: albedo_f_map.tif
img/flooring/: albedo_f_map.tif
src/: core.cpp  core.h  main.cpp
